--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "i18next": "^25.3.4",
     "next": "15.4.6",
+    "next-i18next": "^15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-i18next": "^15.6.1",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
