--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-i18next": "^15.6.1",
+    "swr": "^2.3.6",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
